src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwF1000-dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1000 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
